After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692732 - assistant-view: don't reference DhApplication
assistant-view: don't reference DhApplication
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-28 20:09 UTC by Carl-Anton Ingmarsson
Modified: 2013-01-31 10:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
assistant-view: don't reference DhApplication (8.71 KB, patch)
2013-01-28 20:09 UTC, Carl-Anton Ingmarsson
none Details | Review

Description Carl-Anton Ingmarsson 2013-01-28 20:09:17 UTC
To make it possible to use DhApplication in separate applications
which don't have a DhApplication instance.
Comment 1 Carl-Anton Ingmarsson 2013-01-28 20:09:19 UTC
Created attachment 234651 [details] [review]
assistant-view: don't reference DhApplication

Add a new "open-uri" signal to signal that a URI should be opened. This way
DhAssistantView doesn't have to reference DhApplication which makes it
possible to use DhAssistantView in other applications.
Comment 2 Frederic Peters 2013-01-31 10:41:29 UTC
It's in. Thanks!