assistant-view: don't reference DhApplication

Add a new "open-uri" signal to signal that a URI should be opened. This way
DhAssistantView doesn't have to reference DhApplication which makes it
possible to use DhAssistantView in other applications.

https://bugzilla.gnome.org/show_bug.cgi?id=692732